--- a/CSS/style.css
+++ b/CSS/style.css
@@ -9,16 +9,15 @@
 /*NAV BAR BEGINNING */
 
 .nav {
-    background-color: rgb(72, 72, 72);
+    background-color: rgb(62, 58, 58);
     padding: 30px;
-    color: rgb(235, 238, 240);
+    color: rgb(214, 220, 224);
     display: flex;
     justify-content: center;
 }
 
 .nav-ul {
-    display: flex;
-    flex-direction: row;
+    
     font-size: x-large;
     text-align: center;
     gap: 100px;
@@ -27,6 +26,8 @@
 }
 
 .nav-link {
+    display: flex;
+    flex-direction: column;
     color: aliceblue;
     text-decoration: none;
 
@@ -77,7 +78,6 @@
 
 }
 
-
 .footer ul {
     text-decoration: none;
     list-style: none;
@@ -86,16 +86,185 @@
 
 /* FOOTER END */
 
+/* DISCOGRAFIA BEGINNING */
+
+.main-disc {
+    padding: 30px;
+}
+
+.main-disc h2 {
+    text-align: center;
+    padding-bottom: 20px;
+
+}
+
+.main-in h2 {
+    color: rgb(54, 53, 47);
+    font-size: 30px;    
+}
+
 
 .spot1 {
     display: flex;
-    padding: 20px;
+    padding: 30px;
     gap: 20px;
-    border-radius: 2px;
+    border: 2px solid black;
+    border-radius: 7px;
+    background-color: rgb(133, 112, 98);
+}
 
+.spot1-div h1 {
+    padding: 20px;
 }
 
 .spot2 {
     display: flex;
     padding: 30px;
+    gap: 20px;
+    border: 2px solid black;
+    border-radius: 7px;
+    background-color: antiquewhite;
 }
+
+.spot2-div h1 {
+    padding: 20px;
+}
+
+.spot3 {
+    display: flex;
+    padding: 30px;
+    gap: 20px;
+    border: 2px solid black;
+    border-radius: 7px;
+    background-color: rgb(124, 122, 120);
+}
+
+.spot3-div h1 {
+    padding: 20px;
+}
+
+/* DISCOGRAFIA END */
+
+.main-jour {
+    text-align: center;
+    padding: 20px;
+}
+
+.grid {
+    background-color: rgb(86, 82, 76);
+    padding: 10px;
+    display: grid;
+    grid-template-columns: repeat(5, 2fr);
+    grid-template-rows: auto;
+    grid-template-areas: 
+    'area1 area1 area1 area2 area3'
+    'area4 area4 area4 area5 area3';
+    gap: 5px;
+}
+
+.caja {
+    width: 100%;
+    height: 100%;
+    background-color: rgb(255, 255, 255);
+}
+
+.caja img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+}
+
+.c1 {
+    grid-area: area1;
+    background-color: aquamarine;
+    display: flex;
+    flex-direction: row;
+    background-color: aliceblue;
+    gap: 10px;
+    padding: 10px;
+}
+.c2 {
+    grid-area: area2;
+    background-color: rgb(96, 172, 147);
+    display: flex;
+    flex-direction: column;
+    background-color: aliceblue;
+    gap: 10px;
+    padding: 10px;
+}
+.c3 {
+    grid-area: area3;
+    background-color: rgb(23, 228, 160);
+    display: flex;
+    flex-direction: column;
+    background-color: aliceblue;
+    gap: 10px;
+    padding: 10px;
+
+}
+.c4 {
+    grid-area: area4;
+    background-color: rgb(53, 96, 82);
+    display: flex;
+    flex-direction: column;
+    background-color: aliceblue;
+    gap: 10px;
+    padding: 10px;
+
+}
+.c5 {
+    grid-area: area5;
+    background-color: rgb(119, 154, 142);
+    display: flex;
+    flex-direction: column;
+    background-color: aliceblue;
+    gap: 10px;
+    padding: 10px;
+
+}
+
+.caja__body {
+    padding: 10px;
+}
+
+.c1 img {
+    height: 100%;
+    width: 40%;
+
+}
+.c2 img {
+    height: 55%;
+}
+.c3 img {
+    height: 65%;
+    width: 100%;
+}
+.c4 img {
+    height: 70%;
+}
+.c5 img {
+    height: 80%;
+}
+
+.c1 h2 {
+    padding: 10px;
+}
+.c2 h2 {
+    padding: 10px;
+}
+.c3 h2 {
+    padding: 10px;
+}
+.c4 h2 {
+    padding: 10px;
+}
+.c5 h2 {
+    padding: 10px;
+}
+
+
+
+
+
+
+/* JOURNEY END */
