--- a/CSS/style.css
+++ b/CSS/style.css
@@ -14,10 +14,13 @@
     color: rgb(214, 220, 224);
     display: flex;
     justify-content: center;
+    height: 100%;
+
 }
 
 .nav-ul {
-    
+    display: flex;
+    flex-direction: column;
     font-size: x-large;
     text-align: center;
     gap: 100px;
@@ -26,11 +29,9 @@
 }
 
 .nav-link {
-    display: flex;
-    flex-direction: column;
     color: aliceblue;
     text-decoration: none;
-
+    height: 100%;
 }
 
 .logo {
@@ -52,6 +53,12 @@
     padding: 2px;
     transition: 0.40s;
     border-radius: 4px;
+}
+
+@media screen and (min-width: 699px){
+    .nav-ul{
+        flex-direction: row;
+    }
 }
 
 /* NAV BAR END */
@@ -106,8 +113,9 @@
 
 .spot1 {
     display: flex;
+    flex-direction: column;
     padding: 30px;
-    gap: 20px;
+    gap: 10px;
     border: 2px solid black;
     border-radius: 7px;
     background-color: rgb(133, 112, 98);
@@ -141,6 +149,12 @@
 
 .spot3-div h1 {
     padding: 20px;
+}
+
+@media screen and (min-width: 699){
+    .spot1{
+        flex-direction: row;
+    }
 }
 
 /* DISCOGRAFIA END */
@@ -261,10 +275,5 @@
 .c5 h2 {
     padding: 10px;
 }
-
-
-
-
-
 
 /* JOURNEY END */
