3ra entrega - update

--- a/SCSS/component/_navbar.scss
+++ b/SCSS/component/_navbar.scss
@@ -1,35 +1,28 @@
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Ysabeau:wght@300&display=swap');
+
 .logo {
     background-image: url(../multimedia/Bandalos\ vintage\ 1.jpg);
     background-repeat: no-repeat;
-    height: 600px;
-    object-fit: cover;
-  }
-  
-  .navbar-brand {
-    font-size: 34px;
+    background-size: cover;
+    height: 20vh; /* ajusta la altura a la mitad de la ventana del navegador */
+    width: 100%
   }
   
   .navbar-nav {
     display: flex;
     padding-left: 530px;
     color: white;
-  }
-  
-  @media (min-width: 800px) {
-    .navbar-nav {
-      padding-left: 10px;
-    }
-  }
-  .navbar {
-    background-color: rgba(41, 41, 39, 0.5);
+    font-family: 'Ysabeau', sans-serif;
+
   }
   
   .navbar-brand {
-    color: rgb(226, 195, 17);
+    color: rgb(226, 195, 17);font-family: 'Pacifico', cursive;
+    font-size: 34px;
   }
   
   .navbar-toggler {
-    background-color: rgb(226, 237, 237);
+    background-color: rgb(138, 148, 148);
   }
   
   .nav-link:hover {
@@ -39,6 +32,7 @@
     padding: 2px;
     transition: 0.4s;
     border-radius: 4px;
+    font-family: 'Ysabeau', sans-serif;
   }
-  
+
   /* NAV BAR END */
