--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,58 +1,34 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&family=Roboto:ital,wght@0,500;1,400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Pacifico&family=Ysabeau:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Pacifico&family=Ysabeau:wght@300&display=swap");
 * {
   padding: 0%;
   margin: 0%;
   box-sizing: border-box;
 }
 
-/* BODY INDEX */
-.img1-ind {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  height: 100%;
-  width: 100%;
-  object-fit: cover;
-}
-
-@media (min-width: 800px) {
-  .img1-ind {
-    flex-direction: row;
-  }
-}
-/*NAV BAR BEGINNING */
 .logo {
   background-image: url(../multimedia/Bandalos\ vintage\ 1.jpg);
   background-repeat: no-repeat;
-  height: 600px;
-  object-fit: cover;
-}
-
-.navbar-brand {
-  font-size: 34px;
+  background-size: cover;
+  height: 20vh; /* ajusta la altura a la mitad de la ventana del navegador */
+  width: 100%;
 }
 
 .navbar-nav {
   display: flex;
   padding-left: 530px;
   color: white;
-}
-
-@media (min-width: 800px) {
-  .navbar-nav {
-    padding-left: 10px;
-  }
-}
-.navbar {
-  background-color: rgba(41, 41, 39, 0.5);
+  font-family: "Ysabeau", sans-serif;
 }
 
 .navbar-brand {
   color: rgb(226, 195, 17);
+  font-family: "Pacifico", cursive;
+  font-size: 34px;
 }
 
 .navbar-toggler {
-  background-color: rgb(226, 237, 237);
+  background-color: rgb(138, 148, 148);
 }
 
 .nav-link:hover {
@@ -62,21 +38,164 @@
   padding: 2px;
   transition: 0.4s;
   border-radius: 4px;
+  font-family: "Ysabeau", sans-serif;
 }
 
 /* NAV BAR END */
-/* MAIN INICIO */
-.main-in {
+/* FOOTER BEGINNING */
+.footer {
   padding: 30px;
   margin: 0;
+  text-align: center;
+  background-color: rgb(177, 177, 172);
+  list-style: none;
 }
 
-/* MAIN INICIO END */
-/* DISCOGRAFIA BEGINNING */
+.footer ul {
+  text-decoration: none;
+  list-style: none;
+  padding: 20px;
+}
+
+/* FOOTER END */
+/* MAIN BEGINNING */
+.main-in {
+  background-color: rgb(213, 206, 187);
+  padding: 0px;
+  margin: 0;
+  font-family: "Ysabeau", sans-serif;
+  min-height: 100vh;
+  position: relative;
+}
+.main-in video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.main-in .capa {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  opacity: 0.5;
+  mix-blend-mode: overlay;
+}
+.main-in .navbar {
+  padding-top: 100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 60%;
+  margin: auto;
+  position: relative;
+  z-index: 2;
+}
+.main-in .navbar .bandaloslogo {
+  display: flex;
+  font-family: "Pacifico", cursive;
+  color: gold;
+  align-items: center;
+  padding: 15px;
+  margin-bottom: 30px;
+  font-size: 90px;
+  text-decoration: none;
+}
+.main-in .navbar .bandaloslogo :hover {
+  color: black;
+  transition: 0.5s;
+}
+.main-in .navbar ul {
+  display: flex;
+  gap: 65px;
+  padding: 25px;
+}
+.main-in .navbar ul li {
+  list-style: none;
+  background-color: rgb(255, 255, 255);
+  width: fit-content;
+  padding: 4px;
+  cursor: pointer;
+  border-radius: 20px;
+}
+.main-in .navbar ul li :hover {
+  background-color: rgb(0, 0, 0);
+  border-radius: 3px;
+  color: rgb(255, 251, 251);
+  padding: 6px;
+  border-radius: 20px;
+  transition: 0.8s;
+}
+.main-in .navbar ul li a {
+  text-decoration: none;
+  display: flex;
+  font-size: 15px;
+  color: rgb(0, 0, 0);
+  font-weight: 800;
+}
+.main-in hr {
+  border-width: 1px;
+  border-style: dotted;
+  border-color: black;
+  margin: 25px;
+}
+
+.img1-ind {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+.img1-ind div {
+  margin-top: 25px;
+}
+
+.abimg1 {
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  gap: 20px;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+.abimg1 h1 {
+  padding-left: 130px;
+  margin: 20px;
+  color: rgb(52, 42, 19);
+}
+.abimg1 p {
+  margin: 15px;
+}
+
+.abimg2 {
+  display: flex;
+  padding: 20px;
+  flex-direction: column;
+  gap: 20px;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+.abimg2 h1 {
+  padding-left: 130px;
+  margin: 20px;
+  color: rgb(52, 42, 19);
+}
+
+/* MAIN DISCOGRAFIA BEGINNING */
 .main-disc {
   padding: 30px;
   display: grid;
   gap: 15px;
+  font-family: "Ysabeau", sans-serif;
 }
 
 .main-disc h2 {
@@ -103,11 +222,6 @@
   padding: 20px;
 }
 
-@media screen and (min-width: 699px) {
-  .spot1 {
-    flex-direction: row;
-  }
-}
 .spot2 {
   display: flex;
   flex-direction: column;
@@ -122,11 +236,6 @@
   padding: 20px;
 }
 
-@media screen and (min-width: 699px) {
-  .spot2 {
-    flex-direction: row;
-  }
-}
 .spot3 {
   display: flex;
   flex-direction: column;
@@ -141,12 +250,7 @@
   padding: 20px;
 }
 
-@media screen and (min-width: 699px) {
-  .spot3 {
-    flex-direction: row;
-  }
-}
-/* DISCOGRAFIA END */
+/* MAIN DISCOGRAFIA END */
 .main-jour {
   text-align: center;
   padding: 20px;
@@ -270,23 +374,48 @@
   padding: 10px;
 }
 
-/* JOURNEY END */
-/* FOOTER BEGINNING */
-.footer {
-  padding: 30px;
-  margin: 0;
-  text-align: center;
-  background-color: rgb(177, 177, 172);
-  list-style: none;
+/* MAIN JOURNEY END */
+/* MAIN END */
+@media (min-width: 800px) {
+  .img1-ind {
+    flex-direction: row;
+  }
 }
-
-.footer ul {
-  text-decoration: none;
-  list-style: none;
-  padding: 20px;
+@media (min-width: 800px) {
+  .abimg1 {
+    flex-direction: row;
+  }
 }
-
-/* FOOTER END */
+@media (min-width: 800px) {
+  .abimg2 {
+    flex-direction: row;
+  }
+}
+@media (min-width: 800px) {
+  .navbar-nav {
+    padding-left: 10px;
+  }
+}
+@media screen and (min-width: 699px) {
+  .spot1 {
+    flex-direction: row;
+  }
+}
+@media screen and (min-width: 699px) {
+  .spot2 {
+    flex-direction: row;
+  }
+}
+@media screen and (min-width: 699px) {
+  .spot3 {
+    flex-direction: row;
+  }
+}
+@media (min-width: 800px) {
+  .navbar-nav {
+    padding-left: 15px;
+  }
+}
 
 
 /*# sourceMappingURL=style.css.map */
