--- a/SCSS/layout/_mediaquieries.scss
+++ b/SCSS/layout/_mediaquieries.scss
@@ -5,6 +5,18 @@
   }
 
   @media (min-width: 800px) {
+    .abimg1 {
+      flex-direction: row;
+    }
+  }
+
+  @media (min-width: 800px) {
+    .abimg2 {
+      flex-direction: row;
+    }
+  }
+
+  @media (min-width: 800px) {
     .navbar-nav {
       padding-left: 10px;
     }
@@ -25,5 +37,11 @@
   @media screen and (min-width: 699px) {
     .spot3 {
       flex-direction: row;
+    }
+  }
+
+  @media (min-width: 800px) {
+    .navbar-nav {
+      padding-left: 15px;
     }
   }
