--- a/SCSS/layout/_index.scss
+++ b/SCSS/layout/_index.scss
@@ -3,7 +3,7 @@
 /* MAIN BEGINNING */
 
 .main-in {
-    background-color: rgb(213, 206, 187);
+    background-color: antiquewhite;
     padding: 0px;
     margin: 0;
     font-family: 'Ysabeau', sans-serif;
@@ -25,7 +25,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background-color: black;
+        background-color: rgba(0, 0, 0, 0.527);
         opacity: 0.5;
         mix-blend-mode: overlay;
     }
@@ -52,7 +52,7 @@
             font-size: 90px;
             text-decoration: none;
             :hover {
-                color: black;
+                color: rgb(0, 0, 0);
                 transition: 0.5s;
             }
         }
@@ -159,6 +159,7 @@
 /* MAIN DISCOGRAFIA BEGINNING */
 
 .main-disc {
+    background-color: antiquewhite;
     padding: 30px;
     display: grid;
     gap: 15px;
