--- a/SCSS/layout/_mediaquieries.scss
+++ b/SCSS/layout/_mediaquieries.scss
@@ -18,7 +18,7 @@
 
   @media (min-width: 800px) {
     .navbar-nav {
-      padding-left: 10px;
+        padding: 15px;
     }
   }
 
@@ -43,5 +43,10 @@
   @media (min-width: 800px) {
     .navbar-nav {
       padding-left: 15px;
+    }
+  }
+
+  @media (min-width: 699) {
+    .navbar ul {
     }
   }
