--- a/SCSS/layout/_mediaquieries.scss
+++ b/SCSS/layout/_mediaquieries.scss
@@ -4,6 +4,8 @@
     }
   }
 
+  // MAIN ABOUT US
+
   @media (min-width: 800px) {
     .abimg1 {
       flex-direction: row;
@@ -15,6 +17,26 @@
       flex-direction: row;
     }
   }
+
+  @media (min-width: 800px) {
+    .abimg3 {
+      flex-direction: row;
+    }
+  }
+
+  @media (min-width: 800px) {
+    .abimg4 {
+      flex-direction: row;
+    }
+  }
+
+  @media (min-width: 800px) {
+    .abimg5 {
+      flex-direction: row;
+    }
+  }
+
+  // FINISH MAIN ABOUT US
 
   @media (min-width: 800px) {
     .navbar-nav {
