--- a/SCSS/layout/_index.scss
+++ b/SCSS/layout/_index.scss
@@ -142,8 +142,8 @@
 
 .abimg2 {
     display: flex;
-    padding: 20px;
     flex-direction: column;
+    padding-right: 20px;
     gap: 20px;
     height: 100%;
     width: 100%;
@@ -154,8 +154,85 @@
         margin: 20px;
         color: rgb(52, 42, 19);
     }
+    p {
+        margin: 15px;
+    }
 }
 
+.abimg3 {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    gap: 20px;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+
+    h1 {
+        padding-left: 130px;
+        margin: 20px;
+        color: rgb(52, 42, 19);
+    }
+
+    p {
+        margin: 15px;
+    }
+
+}
+
+.abimg4 {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    gap: 20px;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+
+    h1 {
+        padding-left: 130px;
+        margin: 20px;
+        color: rgb(52, 42, 19);
+    }
+
+    p {
+        margin: 15px;
+    }
+
+}
+
+.abimg5 {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    gap: 20px;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+
+    h1 {
+        padding-left: 130px;
+        margin: 20px;
+        color: rgb(52, 42, 19);
+    }
+
+    p {
+        margin: 15px;
+    }
+
+}
+
+// FINISH MAIN ABOUT
+
+// MAIN HISTORY
+
+.main-hist {
+    background-color: antiquewhite;
+    padding: 20px;
+    margin: 0;
+    font-family: 'Ysabeau', sans-serif;
+
+}
 /* MAIN DISCOGRAFIA BEGINNING */
 
 .main-disc {
