--- a/CSS/style.css
+++ b/CSS/style.css
@@ -52,7 +52,7 @@
   border: 2px solid transparent;
   padding: 2px;
   transition: 0.8s;
-  border-radius: 15px;
+  border-radius: 10px;
   font-family: "Ysabeau", sans-serif;
 }
 
@@ -129,37 +129,44 @@
   font-size: 90px;
   text-decoration: none;
 }
-.main-in .navbar .bandaloslogo :hover {
+.main-in .navbar .bandaloslogo:hover {
   color: rgb(0, 0, 0);
   transition: 0.5s;
+  box-shadow: 10px 10px 5px 0;
+  background-color: gold;
 }
 .main-in .navbar ul {
   display: flex;
-  gap: 65px;
-  padding: 25px;
+  gap: 100px;
+  padding: 0;
 }
 .main-in .navbar ul li {
+  font-family: "Pacifico", cursive;
   list-style: none;
-  background-color: rgb(255, 255, 255);
-  width: fit-content;
+  width: max-content;
   padding: 4px;
   cursor: pointer;
-  border-radius: 20px;
+  border-radius: 5px;
+  border-style: dotted gold;
+  color: rgb(4, 4, 4);
 }
-.main-in .navbar ul li :hover {
-  background-color: rgb(0, 0, 0);
+.main-in .navbar ul li:hover {
+  background-color: rgb(170, 170, 170);
   border-radius: 3px;
-  color: rgb(255, 251, 251);
   padding: 6px;
   border-radius: 20px;
   transition: 0.8s;
+  box-shadow: 15px 15px 10px 0;
 }
 .main-in .navbar ul li a {
   text-decoration: none;
   display: flex;
-  font-size: 15px;
-  color: rgb(0, 0, 0);
+  font-size: 25px;
+  color: rgb(170, 170, 170);
   font-weight: 800;
+}
+.main-in .navbar ul li a:hover {
+  color: rgb(0, 0, 0);
 }
 .main-in hr {
   border-width: 1px;
@@ -201,7 +208,7 @@
 .abimg2 {
   display: flex;
   flex-direction: column;
-  padding-right: 20px;
+  padding: 20px;
   gap: 20px;
   height: 100%;
   width: 100%;
