--- a/SCSS/layout/_index.scss
+++ b/SCSS/layout/_index.scss
@@ -51,40 +51,48 @@
             margin-bottom: 30px;
             font-size: 90px;
             text-decoration: none;
-            :hover {
+            &:hover {
                 color: rgb(0, 0, 0);
                 transition: 0.5s;
+                box-shadow: 10px 10px 5px 0;
+                background-color: gold;
             }
         }
 
         ul {
             display: flex;
-            gap: 65px;
-            padding: 25px;
+            gap: 100px;
+            padding: 0;
             
             
             li {
+                font-family: 'Pacifico', cursive;
                 list-style: none;
-                background-color: rgb(255, 255, 255);
-                width: fit-content;
+                // background-color: rgb(245, 242, 242);
+                width:max-content;
                 padding: 4px;
                 cursor: pointer;
-                border-radius: 20px;
-                :hover {
-                    background-color: rgb(0, 0, 0);
+                border-radius: 5px;
+                border-style: dotted gold;
+                color: rgb(4, 4, 4);
+                &:hover {
+                    background-color: rgb(170, 170, 170);
                     border-radius: 3px;
-                    color: rgb(255, 251, 251);
                     padding: 6px;
                     border-radius: 20px;
                     transition: 0.8s;
+                    box-shadow: 15px 15px 10px 0;
                 }
 
             a {
                 text-decoration: none;
                 display: flex;
-                font-size: 15px;
-                color: rgb(0, 0, 0);
+                font-size: 25px;
+                color: rgb(170, 170, 170);
                 font-weight: 800;
+                &:hover {
+                    color: rgb(0, 0, 0);
+                }
             }
 
         }
@@ -143,7 +151,7 @@
 .abimg2 {
     display: flex;
     flex-direction: column;
-    padding-right: 20px;
+    padding: 20px;
     gap: 20px;
     height: 100%;
     width: 100%;
